# tsfm-drcr-remote-experiments

./: .gitattributes  .gitignore  README.md  REMOTE_CODEX_PROMPT_E_GAP_000R.md  pyproject.toml
configs/: benefit_selective_drcr_external_protocol.json  benefit_selective_drcr_protocol.json  candidate_policy_set.yaml  conformal_policy_repair_grid.json  drcr_smooth_frozen_protocol.json  risk_thresholds.yaml
data/: README.md
docs/: aaai_oral_goal_status.md  benefit_selective_external_confirmation_protocol.md  benefit_selective_external_execution_pack.md  forecast_artifact_contract.md  metrics.md  paper_main_experiment_assets.md  remote_q9_drcr_repair_evaluation_addendum.md  remote_q9_ingestion_manifest.md  remote_q9_main_table.md  remote_q9_rerun_completion_audit.md  remote_q9_rerun_execution_pack.md
remote_q9_handoff/: RESULTS_CONTRACT.md  RUN_LOG_20260710_0155.md  RUN_LOG_20260714_external_partial.md  RUN_LOG_20260722_1845.md  RUN_LOG_TEMPLATE.md
scripts/: build_aaai_oral_goal_status.py  build_benefit_selective_external_execution_pack.py  build_benefit_selective_external_manifest.py  build_benefit_selective_external_recovery_manifest.py  build_chronos_scaling_manifest.py  build_classical_probabilistic_baseline_feasibility.py  build_drcr_paper_readiness_reports.py  build_gift_eval_failure_predictor.py  build_history_sidecars_from_raw.py  build_local_non_memory_work_queue.py  build_local_rerun_resource_blocker_report.py  build_missing_predictor_features_from_metrics.py  build_native_classical_interval_audit.py  build_objective_baseline_comparison.py  (+80 more)
(+427 files in other folders)
