[project]
name = "low-snr-tsfm-degeneration"
version = "0.1.0"
description = "Reproducible scaffold for studying low-SNR forecast degeneration in time-series foundation models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
analysis = [
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "pyyaml>=6.0",
]
tsfm = [
  "torch>=2.2",
  "transformers>=4.46",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
